--- a/Netflix_stock_analysis.ipynb
+++ b/Netflix_stock_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMk0rH3q4SoCi5dBD6+UAx7",
+      "authorship_tag": "ABX9TyM6Rx76DJoJzucp6gBdzZPo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,9 +52,9 @@
           "height": 206
         },
         "id": "SSInX3Q49Zz0",
-        "outputId": "fa65aa06-3aaf-4566-ad79-c5826a7d48a6"
+        "outputId": "870115b5-ba69-4a63-bb29-4c3aa7c552dd"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -76,7 +76,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1716d641-3887-4fa8-a050-fa9761751c23\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ef5a3917-96c4-44f0-a7fb-94ed76fd3567\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -161,7 +161,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1716d641-3887-4fa8-a050-fa9761751c23')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ef5a3917-96c4-44f0-a7fb-94ed76fd3567')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -213,12 +213,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1716d641-3887-4fa8-a050-fa9761751c23 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ef5a3917-96c4-44f0-a7fb-94ed76fd3567 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1716d641-3887-4fa8-a050-fa9761751c23');\n",
+              "        const element = document.querySelector('#df-ef5a3917-96c4-44f0-a7fb-94ed76fd3567');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -238,8 +238,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-eb50ddab-17ed-4015-a52c-8dfb8da80867\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-eb50ddab-17ed-4015-a52c-8dfb8da80867')\"\n",
+              "<div id=\"df-94d7cb12-4b6f-4374-a47a-bd702d699838\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-94d7cb12-4b6f-4374-a47a-bd702d699838')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -358,7 +358,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-eb50ddab-17ed-4015-a52c-8dfb8da80867 button');\n",
+              "        document.querySelector('#df-94d7cb12-4b6f-4374-a47a-bd702d699838 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -375,13 +375,14 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 2
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "#converting the string to datetime format\n",
         "stock['Date']=pd.to_datetime(stock[\"Date\"])"
       ],
       "metadata": {
@@ -389,15 +390,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YEjEUWJN9rRp",
-        "outputId": "22afc2b0-8291-4525-906a-b2831a55ce56"
+        "outputId": "8535c5ff-f0da-4bd0-af1d-c4ed30ae0e1b"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-6-62b1795adedb>:1: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+            "<ipython-input-3-62b1795adedb>:1: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
             "  stock['Date']=pd.to_datetime(stock[\"Date\"])\n"
           ]
         }
@@ -406,6 +407,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#getting the size of dataset\n",
         "stock.shape"
       ],
       "metadata": {
@@ -413,9 +415,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xDk5244v-Mkv",
-        "outputId": "d910e710-b01d-43ba-cc3c-be4b7d5023d3"
+        "outputId": "926ac71f-3295-4a2d-9955-e4462690c9bd"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -425,13 +427,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 4
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "#checking the null values of the dataset\n",
         "stock.isnull().sum()"
       ],
       "metadata": {
@@ -439,9 +442,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y7vJgf1e-VFu",
-        "outputId": "720027f4-a4d2-40fd-bf1f-8b7b283ab154"
+        "outputId": "56dbcf15-99a6-4781-ca13-9844b35481c8"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -458,13 +461,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "#describing the dataset\n",
         "stock.describe()"
       ],
       "metadata": {
@@ -473,9 +477,9 @@
           "height": 300
         },
         "id": "JhRLH9xg-eJC",
-        "outputId": "64eccc9a-02c2-4fad-ed44-ec0dae4e8628"
+        "outputId": "bea24641-26ea-4d0d-e0d2-23109269fabd"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -503,7 +507,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fe7f74c9-4578-4a95-889c-7fac6f270c87\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-afd62544-f9b7-4f58-ab79-f929d609575f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -618,7 +622,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fe7f74c9-4578-4a95-889c-7fac6f270c87')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-afd62544-f9b7-4f58-ab79-f929d609575f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -670,12 +674,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-fe7f74c9-4578-4a95-889c-7fac6f270c87 button.colab-df-convert');\n",
+              "        document.querySelector('#df-afd62544-f9b7-4f58-ab79-f929d609575f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-fe7f74c9-4578-4a95-889c-7fac6f270c87');\n",
+              "        const element = document.querySelector('#df-afd62544-f9b7-4f58-ab79-f929d609575f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -695,8 +699,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-d80dab96-fab2-486c-9307-970135f55c72\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d80dab96-fab2-486c-9307-970135f55c72')\"\n",
+              "<div id=\"df-da21f4a8-1cf4-4473-bdd9-f020a9487626\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-da21f4a8-1cf4-4473-bdd9-f020a9487626')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -815,7 +819,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-d80dab96-fab2-486c-9307-970135f55c72 button');\n",
+              "        document.querySelector('#df-da21f4a8-1cf4-4473-bdd9-f020a9487626 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -831,7 +835,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 6
         }
       ]
     },
@@ -843,7 +847,7 @@
       "metadata": {
         "id": "aDQvUgO1-tTi"
       },
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -865,9 +869,9 @@
           "height": 472
         },
         "id": "ORrfNI8q_Ha6",
-        "outputId": "6ad3af5e-480d-4079-c088-5f317bf2974a"
+        "outputId": "13b50341-796a-4307-fb72-211188818451"
       },
-      "execution_count": 29,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -898,9 +902,9 @@
           "height": 472
         },
         "id": "aMnWF2bBASHg",
-        "outputId": "d2db3bd6-7065-44d3-d33a-d3339b3c9eb0"
+        "outputId": "3e45f864-27d4-4316-e208-5fda55f08d3d"
       },
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -931,9 +935,9 @@
           "height": 472
         },
         "id": "J6xcF0BtD4Te",
-        "outputId": "6b26df32-2e70-4cc5-f095-e39d7bc92fdc"
+        "outputId": "9167c5c7-2560-48fc-8b73-8a3180f8ec41"
       },
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -964,9 +968,9 @@
           "height": 472
         },
         "id": "DxNqrbTYD5Vj",
-        "outputId": "8162b00d-8a80-4f21-c3bd-c28aee04b767"
+        "outputId": "4463ddb7-5636-46a2-846a-463382ca0c4a"
       },
-      "execution_count": 26,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -997,9 +1001,9 @@
           "height": 472
         },
         "id": "Qros2-kAD9ij",
-        "outputId": "b6916390-8978-41e6-f67d-08befb5de1ad"
+        "outputId": "a546783e-8180-43c4-e7cc-b686da98a765"
       },
-      "execution_count": 27,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1030,9 +1034,9 @@
           "height": 472
         },
         "id": "mxL6wtzcEChn",
-        "outputId": "af10ce27-508c-4961-c39c-8379684f248e"
+        "outputId": "c9853598-fd5c-4dbc-be50-ac931c8fe95a"
       },
-      "execution_count": 28,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1048,9 +1052,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LinearRegression"
+      ],
       "metadata": {
         "id": "5sn8x2QmEGE8"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=stock.drop([\"Date\",\"Close\"],axis=1)\n",
+        "y=stock['Close']"
+      ],
+      "metadata": {
+        "id": "Yalj6Cydhp5_"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.impute import SimpleImputer"
+      ],
+      "metadata": {
+        "id": "HNLD5Ow4iWv1"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8GB4ViBNi2df"
       },
       "execution_count": null,
       "outputs": []
