--- a/Netflix_stock_analysis.ipynb
+++ b/Netflix_stock_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6Rx76DJoJzucp6gBdzZPo",
+      "authorship_tag": "ABX9TyPVbfeQKU/p0D6XLKVCQuuh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1087,9 +1087,42 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "imputer=SimpleImputer(strategy=\"mean\")"
+      ],
       "metadata": {
         "id": "8GB4ViBNi2df"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_imputed=imputer.fit_transform(x)"
+      ],
+      "metadata": {
+        "id": "why0HMt8jRHj"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train,x_test,y_train,y_test=train_test_split(x_imputed,y,test_size=0.2,random_state=23)"
+      ],
+      "metadata": {
+        "id": "k9SBnxgIjcDf"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OQvfth53jzJK"
       },
       "execution_count": null,
       "outputs": []
