--- a/Netflix_stock_analysis.ipynb
+++ b/Netflix_stock_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVbfeQKU/p0D6XLKVCQuuh",
+      "authorship_tag": "ABX9TyO7J1tR+kyHSNKSUscIHFKQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1065,6 +1065,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#splitting the entire dataset into 2 segments\n",
         "x=stock.drop([\"Date\",\"Close\"],axis=1)\n",
         "y=stock['Close']"
       ],
@@ -1088,6 +1089,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#using SimpleImputer to handle missing values in the predictive analysis dataset , replaces with NaN values\n",
         "imputer=SimpleImputer(strategy=\"mean\")"
       ],
       "metadata": {
@@ -1099,6 +1101,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#imputing the x data\n",
         "x_imputed=imputer.fit_transform(x)"
       ],
       "metadata": {
@@ -1110,6 +1113,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#splitting the dataset into training data and testing data\n",
         "x_train,x_test,y_train,y_test=train_test_split(x_imputed,y,test_size=0.2,random_state=23)"
       ],
       "metadata": {
