--- a/Netflix_stock_analysis.ipynb
+++ b/Netflix_stock_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnOP3LVjFEtNkzZQk55X6c",
+      "authorship_tag": "ABX9TyOil/tN8meVA97slOT2/Ipf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
           "height": 206
         },
         "id": "SSInX3Q49Zz0",
-        "outputId": "b32dcfb4-1955-453a-af08-ab9edf08df03"
+        "outputId": "59cd63d4-7167-4abb-de1f-bdb7215a36f7"
       },
       "execution_count": 2,
       "outputs": [
@@ -76,7 +76,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-04e81a57-d899-46cb-917f-52830a6041ee\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3ee87f54-2423-4c63-a01e-bd06fd131ed3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -161,7 +161,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-04e81a57-d899-46cb-917f-52830a6041ee')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3ee87f54-2423-4c63-a01e-bd06fd131ed3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -213,12 +213,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-04e81a57-d899-46cb-917f-52830a6041ee button.colab-df-convert');\n",
+              "        document.querySelector('#df-3ee87f54-2423-4c63-a01e-bd06fd131ed3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-04e81a57-d899-46cb-917f-52830a6041ee');\n",
+              "        const element = document.querySelector('#df-3ee87f54-2423-4c63-a01e-bd06fd131ed3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -238,8 +238,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-4e9fcd6d-9569-4279-9230-a72cae08606b\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4e9fcd6d-9569-4279-9230-a72cae08606b')\"\n",
+              "<div id=\"df-40ff910e-4a60-4368-92cb-02614f787677\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-40ff910e-4a60-4368-92cb-02614f787677')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -358,7 +358,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-4e9fcd6d-9569-4279-9230-a72cae08606b button');\n",
+              "        document.querySelector('#df-40ff910e-4a60-4368-92cb-02614f787677 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -390,7 +390,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YEjEUWJN9rRp",
-        "outputId": "8a689103-1e5a-453e-fb36-9a404903ab93"
+        "outputId": "fd935f95-65a4-4e2a-99bb-1ce646968545"
       },
       "execution_count": 3,
       "outputs": [
@@ -415,7 +415,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xDk5244v-Mkv",
-        "outputId": "655c3bf0-4cf0-4e5c-dc31-b167fa4458b1"
+        "outputId": "27631949-15f4-4a09-9350-3bd57ad2763b"
       },
       "execution_count": 4,
       "outputs": [
@@ -442,7 +442,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y7vJgf1e-VFu",
-        "outputId": "25c81f1a-7601-4010-bf31-b90891b4b5de"
+        "outputId": "30315011-8916-4513-98e3-ffe6b146f2ec"
       },
       "execution_count": 5,
       "outputs": [
@@ -477,7 +477,7 @@
           "height": 300
         },
         "id": "JhRLH9xg-eJC",
-        "outputId": "0aae9d2a-1a45-480a-e449-0eeb9ada174c"
+        "outputId": "38234a87-1859-4a7b-e512-d64d9fef139a"
       },
       "execution_count": 6,
       "outputs": [
@@ -507,7 +507,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-325ae9c4-9a4b-444a-9982-71121df8c957\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-98939d1d-c3e5-47cb-aeed-fa5655b1ee3a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -622,7 +622,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-325ae9c4-9a4b-444a-9982-71121df8c957')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-98939d1d-c3e5-47cb-aeed-fa5655b1ee3a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -674,12 +674,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-325ae9c4-9a4b-444a-9982-71121df8c957 button.colab-df-convert');\n",
+              "        document.querySelector('#df-98939d1d-c3e5-47cb-aeed-fa5655b1ee3a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-325ae9c4-9a4b-444a-9982-71121df8c957');\n",
+              "        const element = document.querySelector('#df-98939d1d-c3e5-47cb-aeed-fa5655b1ee3a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -699,8 +699,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-4796eef0-0026-4a8f-8079-0c5ff4336f21\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4796eef0-0026-4a8f-8079-0c5ff4336f21')\"\n",
+              "<div id=\"df-b4ecb170-5424-4184-97fd-5e5a3482499c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b4ecb170-5424-4184-97fd-5e5a3482499c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -819,7 +819,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-4796eef0-0026-4a8f-8079-0c5ff4336f21 button');\n",
+              "        document.querySelector('#df-b4ecb170-5424-4184-97fd-5e5a3482499c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -869,7 +869,7 @@
           "height": 472
         },
         "id": "ORrfNI8q_Ha6",
-        "outputId": "c540c252-6ab4-49a7-e8a6-e5d9f5071c78"
+        "outputId": "6815f4bd-e897-49f6-8abe-9391ac9851a1"
       },
       "execution_count": 8,
       "outputs": [
@@ -902,7 +902,7 @@
           "height": 472
         },
         "id": "aMnWF2bBASHg",
-        "outputId": "becf292b-0613-4beb-ece5-6ffc009bab82"
+        "outputId": "21ff5188-80e2-442f-b7af-4460093b4b6f"
       },
       "execution_count": 9,
       "outputs": [
@@ -935,7 +935,7 @@
           "height": 472
         },
         "id": "J6xcF0BtD4Te",
-        "outputId": "c33e3b1b-6e07-4f7b-e7d2-72d65287063d"
+        "outputId": "b16af732-553b-4f7c-fc0c-2279a45ac457"
       },
       "execution_count": 10,
       "outputs": [
@@ -968,7 +968,7 @@
           "height": 472
         },
         "id": "DxNqrbTYD5Vj",
-        "outputId": "5acc0d8b-5f47-4ed9-f3be-fc9353b4662e"
+        "outputId": "2a28d975-38fa-49a6-9ebe-2daf9f918be7"
       },
       "execution_count": 11,
       "outputs": [
@@ -1001,7 +1001,7 @@
           "height": 472
         },
         "id": "Qros2-kAD9ij",
-        "outputId": "ea921ae2-e475-479e-8bbb-cf6d5e78f494"
+        "outputId": "f982288d-e1f1-4957-8214-a6adb93ecda2"
       },
       "execution_count": 12,
       "outputs": [
@@ -1034,7 +1034,7 @@
           "height": 472
         },
         "id": "mxL6wtzcEChn",
-        "outputId": "a22daaf5-62c4-491f-e797-ffb48036e5f5"
+        "outputId": "a8c68c61-5eaf-4b81-89fd-16f4de589c87"
       },
       "execution_count": 13,
       "outputs": [
@@ -1141,7 +1141,7 @@
       ],
       "metadata": {
         "id": "Ic0WygJFy-lx",
-        "outputId": "4f14da66-b708-439f-f6d7-b579a34ce578",
+        "outputId": "0c879399-3cb9-4743-cc68-4cd66804a450",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
@@ -1167,13 +1167,39 @@
     {
       "cell_type": "code",
       "source": [
-        "y_prediction=model.predict(x_test)"
+        "y_prediction=model.predict(x_test)\n",
+        "y_prediction"
       ],
       "metadata": {
-        "id": "HnjLvQsDzKxF"
+        "id": "HnjLvQsDzKxF",
+        "outputId": "ad5a00cc-cbb7-4b25-c9e7-d6b2d46aee24",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 22,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([322.130005, 486.119995, 360.820007, 444.049988, 478.329987,\n",
+              "       403.540009, 320.779999, 448.679993, 474.799988, 293.51001 ,\n",
+              "       332.720001, 474.059998, 474.470001, 470.26001 , 429.700012,\n",
+              "       583.950012, 303.790009, 305.130005, 492.190002, 485.309998,\n",
+              "       335.890015, 396.200012, 423.970001, 413.170013, 434.700012,\n",
+              "       355.98999 , 431.600006, 378.880005, 329.929993, 345.480011,\n",
+              "       573.349976, 409.369995, 377.589996, 427.549988, 322.549988,\n",
+              "       474.670013, 315.179993, 325.850006, 372.589996, 558.530029,\n",
+              "       420.019989, 425.779999, 440.76001 , 423.700012, 355.679993,\n",
+              "       480.329987, 445.899994, 404.529999, 440.209991, 415.450012,\n",
+              "       413.170013])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1201,9 +1227,9 @@
           "height": 472
         },
         "id": "OdCjTsH32D4c",
-        "outputId": "b7b5f49c-f684-4c55-fe94-ff1d48d7b3e6"
+        "outputId": "dfc9351c-1787-44d7-cd2d-26673b91344c"
       },
-      "execution_count": 33,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1234,9 +1260,9 @@
           "height": 472
         },
         "id": "H_Ii1g9d2yK5",
-        "outputId": "ef55d6d1-1e42-4492-cad4-7a8c06e0b25b"
+        "outputId": "446ac0eb-1e84-42cc-a22f-2a019be606fd"
       },
-      "execution_count": 38,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1253,43 +1279,52 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import accuracy_score"
+        "from sklearn.metrics import mean_squared_error\n",
+        "\n",
+        "mse = mean_squared_error(y_test, y_prediction)\n",
+        "print(f'Mean Squared Error on the test set: {mse}')"
       ],
       "metadata": {
-        "id": "X0l2emDA6Qix"
+        "id": "X0l2emDA6Qix",
+        "outputId": "2f89eb93-aa96-47a4-e933-95f4eba4d02e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 40,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean Squared Error on the test set: 6.551047437039143e-26\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "score=accuracy_score\n",
-        "model=score(y_test,y_prediction,normalize=True)"
+        "model.score(x_test,y_test)"
       ],
       "metadata": {
-        "id": "naEZabgl6sx0",
-        "outputId": "4d63f32d-3837-4ff1-b39d-f3461ca5918e",
+        "id": "BGS23w9t66eJ",
+        "outputId": "c77e5412-fdd8-4c7d-8ac2-c0bdd03f8412",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 314
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": 33,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "continuous is not supported",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-43-0006ecec2cf9>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mscore\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maccuracy_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_prediction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/sklearn/utils/_param_validation.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    190\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    191\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 192\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    193\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mInvalidParameterError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m                 \u001b[0;31m# When the function is just a wrapper around an estimator, we allow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36maccuracy_score\u001b[0;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m     \u001b[0;31m# Compute accuracy for each possible representation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 221\u001b[0;31m     \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    222\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"multilabel\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0;31m# No metrics support \"multiclass-multioutput\" format\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"binary\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multiclass\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multilabel-indicator\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 106\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0} is not supported\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    107\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"binary\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multiclass\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: continuous is not supported"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
         }
       ]
     },
@@ -1297,7 +1332,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "BGS23w9t66eJ"
+        "id": "A73yVj0EW78k"
       },
       "execution_count": null,
       "outputs": []
